exports[`relax test suite dispatch event 1`] = `
<div>
  <div>
    hello plume
  </div>
</div>
`;

exports[`relax test suite initial render relax 1`] = `
<div>
  <div />
  <div>
    hello world!
  </div>
</div>
`;
